--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "sinon": "^9.2.1"
   }
 }
